--- a/Admission Form.html
+++ b/Admission Form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Account</title>
+    <title>Create </title>
 </head>
 <body>
 
@@ -11,3 +11,4 @@
 
 </body>
 </html>
+
