--- a/Admission Form.html
+++ b/Admission Form.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create </title>
+    <title>Admission Form </title>
 </head>
 <body>
 
-    <h5>Create Account → <a href="create.html">Click Here</a></h5>
+    <h5>Admission Form → <a href="create.html">Click Here</a></h5>
 
 </body>
 </html>
+
 
