Modify image source and dimensions in index.html
Updated image source and adjusted width in the HTML.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Dwarkadish Divine Academy</title>
 </head>
 <body>
-  <img src="c:\Users\HP\Downloads\download.jpg"  alt="Dwarkadish Divine School" width="150">
+  <img src="c:\Users\HP\Downloads\Gemini_Generated_Image_15s2pa15s2pa15s2.png" alt="Dwarkadish Divine School" width="200">
    <span> <h4>Dwarkadish Divine School </h4></span>
 
 <!-- HEADER -->
@@ -70,11 +70,6 @@
         </td>
     </tr>
 </table>
-
-</body>
-</html>
-
-
 
 </body>
 </html>
