--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Dwarkadish Divine Academy</title>
 </head>
 <body>
-  <img src="c:\Users\HP\Downloads\Gemini_Generated_Image_15s2pa15s2pa15s2.png" alt="Dwarkadish Divine School" width="200">
+  <img src="<img src="Gemini_Generated_Image.png" alt="Dwarkadish Divine School" width="200">
    <span> <h4>Dwarkadish Divine School </h4></span>
 
 <!-- HEADER -->
@@ -73,3 +73,4 @@
 
 </body>
 </html>
+
